# libpldm

./: .clang-format  .clang-tidy  .gitreview  0001-modify.patch  CHANGELOG.md  CONTRIBUTING.md  Doxyfile.in  OWNERS  README.md  config.h.in  groups  meson.build  meson.options  meson_options.txt  project.config
abi/aarch64/: gcc.dump
abi/x86_64/: gcc.dump
bindings/cpp/: CONTRIBUTING.md  firmware_update.cpp  meson.build  package_parser.cpp  types.cpp  types_private.hpp  utils.cpp  utils.hpp
bindings/cxx/: meson.build  package_parser.cpp  package_parser.hpp  utils.cpp
docs/: fuzzing.md
docs/checklists/: changes.md  releases.md
evolutions/current/: bcd2dec16.yaml  bcd2dec32.yaml  bcd2dec8.yaml  crc32.yaml  crc8.yaml  dec2bcd32.yaml  dec2bcd8.yaml  decode_oem_meta_file_io_req.yaml  decode_oem_meta_write_file_io_req.cocci  get_fru_record_by_option_check.cocci  oem-ibm-header-compat.cocci  pldm_bios_table_append_pad_checksum_check.yaml  pldm_bios_table_attr_entry_enum_decode_pv_num_check.yaml  (+17 more)
examples/: meson.build  platform_pd_responder.c
include/: container_of.h  meson.build
include/libpldm/: _abi_annotation.h  api.h  api.h.in  base.h  bcd.h  bios.h  bios_table.h  buf.h  byteorder.h  compiler.h  control.h  edac.h  entity.h  file.h  file_transfer.h  firmware_fd.h  firmware_update.h  fru.h  instance-id.h  mctp.h  meson.build  pdr.h  pdr_data.h  platform.h  platform_device.h  platform_pd.h  pldm.h  pldm_rde.h  pldm_types.h  rde.h  responder.h  sizes.h.in  smbios.h  state_set.h  states.h  transport.h  utils.h
include/libpldm/bindings/cpp/: firmware_update.hpp  meson.build  package_parser.hpp  types.hpp  utils.hpp
include/libpldm/cpp/: firmware_update.hpp  types.hpp
include/libpldm/instance_id/: instance_id.h
include/libpldm/oem/ibm/: entity.h  file_io.h  fru.h  host.h  meson.build  pdr_oem_ibm.h  platform.h  state_set.h
include/libpldm/oem/ibm/libpldm/: entity_oem_ibm.h  file_io.h  fru_oem_ibm.h  host.h  meson.build  pdr_oem_ibm.h  platform_oem_ibm.h  state_set_oem_ibm.h
include/libpldm/oem/meta/: file_io.h
include/libpldm/oem/meta/libpldm/: file_io.h
include/libpldm/rde/: pldm_rde.h
include/libpldm/requester/: afmctp.h  demux.h  instance-id.h  mctp-demux.h  pldm.h  pldm_base_requester.h  pldm_rde_requester.h  rde_requester.h  transport-afmctp.h  transport-mctp-demux.h
include/libpldm/transport/: af-mctp.h  af_mctp.h  afmctp.h  mctp-demux.h  test.h  transport.h
meson/: arm-linux-gnueabihf.ini
scripts/: abi-dump-formatter  abi-dump-updater  apply-renames  changelog.awk  crater  pre-submit  run-ci
src/: api.h  array.h  base.c  bcd.c  bios.c  bios_table.c  buf.c  compiler.h  control-internal.h  control.c  edac.c  firmware_update.c  fru.c  fru_record.c  mctp-defines.h  meson.build  msgbuf.h  msgbuf.hpp  pdr.c  platform.c  pldm_rde.c  rde.c  responder.c  responder.h  time-utils.c  time-utils.h  utils.c  utils.h
src/compat/linux/: mctp.h
src/dsp/: base.c  base.h  bios.c  bios_table.c  file.c  file_transfer.c  firmware_update.c  fru.c  meson.build  pdr.c  platform.c  rde.c
src/environ/: errno.h  meson.build  time.c  time.h
src/firmware_device/: fd-internal.h  fd.c  meson.build
src/instance_id/: instance_id.c  meson.build
src/msgbuf/: core.h  platform.h
src/oem/ibm/: file_io.c  host.c  meson.build  pdr.c  platform.c
src/oem/meta/: file_io.c  meson.build
src/platform_device/: meson.build  pd-internal.h  pd.c
src/rde/: meson.build  pldm_rde.c
src/requester/: af_mctp.c  demux.c  instance-id.c  mctp-demux.c  meson.build  pldm.c  pldm.h  pldm_base_requester.c  pldm_internal.h  pldm_rde_requester.c  rde_requester.c  transport-afmctp.c  transport-mctp-demux.c
src/transport/: af-mctp-internal.h  af-mctp-test.c  af-mctp-test.h  af-mctp.c  af_mctp.c  afmctp.c  container-of.h  container_of.h  mctp-demux.c  meson.build  socket.c  socket.h  test.c  test.h  transport.c  transport.h  transport_internal.h
tests/: bios_table_iter.c  edac.cpp  instance-id.cpp  libpldm_base_test.cpp  libpldm_bios_table_test.cpp  libpldm_bios_test.cpp  libpldm_firmware_update_test.cpp  libpldm_fru_test.cpp  libpldm_pdr_test.cpp  libpldm_platform_test.cpp  libpldm_rde_test.cpp  libpldm_utils_test.cpp  meson.build  msgbuf.cpp  msgbuf.hpp  msgbuf_generic.c  pldm_base_requester_test.cpp  rde_requester_test.cpp  rde_test.cpp  responder.cpp  transport.cpp  utils.cpp
tests/bindings/cpp/: OWNERS  firmware_update_test.cpp  meson.build  package_parser_test.cpp
tests/bindings/cxx/: meson.build  package_parser_test.cpp
tests/data/: test.hex
tests/dsp/: base.cpp  bios.cpp  bios_table.cpp  bios_table_iter.c  file.cpp  firmware_update.cpp  fru.cpp  meson.build  pdr.cpp  platform.cpp
tests/fuzz/: fd-fuzz.cpp  fd.dict  fuzz++.cpp  fuzz-build.py  fuzz-build.sh  fuzz-coverage.py  fuzz.c  fuzz_cpp.cpp  meson.build
tests/fuzz/fd/: fuzz-build.py  meson.build
tests/fuzz/pd/: meson.build  pd-fuzz.cpp
tests/oem/ibm/: host.cpp  libpldm_fileio_test.cpp  libpldm_host_test.cpp  meson.build
tests/oem/meta/: fileio.cpp  libpldm_fileio_test.cpp  meson.build
tests/rde/: pldm_rde_test.cpp
tests/requester/: base_requester_test.cpp  rde_requester_test.cpp
tests/transport/: af-mctp.cpp  meson.build  send_recv_one.cpp  send_recv_timeout.cpp  send_recv_unwanted.cpp  send_recv_wrong_command_code.cpp  send_recv_wrong_pldm_type.cpp  transport.cpp
tests/unit/: bcd.cpp  control.cpp  meson.build  msgbuf.cpp
tests/unit/bindings/cpp/: firmware-update-test-v1-1-0.cpp  firmware-update-test-v1-3-0.cpp  firmware_update_test.cpp  firmware_update_test_v1_1_0.cpp  firmware_update_test_v1_3_0.cpp  meson.build
tests/unit/dsp/: base.cpp  bios.cpp  bios_table_iter.c  file.cpp  firmware_update.cpp  fru.cpp  meson.build  pdr.cpp  platform.cpp  rde.cpp
tests/unit/oem/ibm/: fileio.cpp  meson.build
tests/unit/platform_device/: meson.build  pd.cpp
tests/unit/transport/: meson.build  send_recv_one.cpp  send_recv_timeout.cpp  send_recv_unwanted.cpp  send_recv_wrong_command_code.cpp  send_recv_wrong_pldm_type.cpp
tools/: meson.build  pd.c
zephyr/: CMakeLists.txt  Kconfig.pldm  OWNERS  module.yml
(+12 files in other folders)
