option('abi', type: 'array', description: 'Constrain exposed symbol classes', choices: ['deprecated', 'stable', 'testing'], value: ['deprecated', 'stable', 'testing'])
option('abi-compliance-check', type: 'feature', description: 'Detect public ABI/API changes')
option('oem', type: 'array', description: 'Enable OEM PLDM extensions', choices: ['ibm', 'meta'], value: ['ibm', 'meta'])
option('tests', type: 'feature', description: 'Build tests')
