option(
    'abi',
    type: 'array',
    description: 'Constrain exposed symbol classes',
    choices: ['deprecated', 'stable', 'testing'],
    value: ['deprecated', 'stable', 'testing'],
)
option(
    'abi-compliance-check',
    type: 'boolean',
    description: 'Detect public ABI/API changes',
    value: false,
)
option(
    'oem',
    type: 'array',
    description: 'Enable OEM PLDM extensions',
    choices: ['ibm', 'meta'],
    value: ['ibm', 'meta'],
)
option('tests', type: 'boolean', description: 'Build tests')
option(
    'transport',
    type: 'boolean',
    description: 'Enable transport implementation',
)
option(
    'tools',
    type: 'array',
    description: 'Tools to build with the library',
    choices: ['pd'],
    value: ['pd'],
)
option(
    'bindings',
    type: 'array',
    description: 'Language bindings for libpldm',
    choices: ['cpp'],
    value: ['cpp'],
)
