option('abi', type: 'array', description: 'Constrain exposed symbol classes', choices: ['deprecated', 'stable', 'test'], value: ['deprecated', 'stable', 'test'])
option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', yield: true)
option('abi-compliance-check', type: 'feature', description: 'Detect public ABI/API changes')
